[project]
name = "triage-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.19.0",
    "xgboost>=3.2.0",
]
